--- a/SSU.Reception/SSU.Reception2/Views/Enrollees/Details.cshtml
+++ b/SSU.Reception/SSU.Reception2/Views/Enrollees/Details.cshtml
@@ -8,216 +8,216 @@
 
 <div>
     <hr />
-	<dl class="dl-horizontal">
-		<dt>
-			@Html.DisplayNameFor(model => model.Surname)
-		</dt>
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Surname)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.Surname)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.Surname)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.Name)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.Name)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.Patronymic)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.Patronymic)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.Patronymic)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.Patronymic)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.School)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.School)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.School)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.School.Name)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.ExamYear)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.ExamYear)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.ExamYear)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.ExamYear)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.PersonalPhone)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.PersonalPhone)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.PersonalPhone)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.PersonalPhone)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.MathScore)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.MathScore)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.MathScore)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.MathScore)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.RussianScore)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.RussianScore)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.RussianScore)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.RussianScore)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.CSScore)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.CSScore)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.CSScore)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.CSScore)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.SSScore)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.SSScore)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.SSScore)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.SSScore)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.HasMedal)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.HasMedal)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.HasMedal)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.HasMedal)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.FirstLevelOlympiad)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.FirstLevelOlympiad)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.FirstLevelOlympiad)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.FirstLevelOlympiad)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.OtherOlympiads)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.OtherOlympiads)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.OtherOlympiads)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.OtherOlympiads)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.ReceiptStatus)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.ReceiptStatus)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.GetReceiptStatus)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.GetReceiptStatus)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.TotalPoints)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.TotalPoints)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.TotalPoints)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.TotalPoints)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.OriginalCertificate)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.OriginalCertificate)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.OriginalCertificate)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.OriginalCertificate)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.FirstPriority)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.FirstPriority)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.FirstPriority.Name)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.FirstPriority.Name)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.SecondPriority)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.SecondPriority)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.SecondPriority.Name)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.SecondPriority.Name)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.ThirdPriority)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.ThirdPriority)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.ThirdPriority.Name)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.ThirdPriority.Name)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.FirstPriorityNumber)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.FirstPriorityNumber)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.FirstPriorityNumber)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.FirstPriorityNumber)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.SecondPriorityNumber)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.SecondPriorityNumber)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.SecondPriorityNumber)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.SecondPriorityNumber)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.ThirdPriorityNumber)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.ThirdPriorityNumber)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.ThirdPriorityNumber)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.ThirdPriorityNumber)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.Comment)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.Comment)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.Comment)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.Comment)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.EnrollmentStatus)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.EnrollmentStatus)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.EnrollmentStatus)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.EnrollmentStatus)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.ActivityStatus)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.ActivityStatus)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.ActivityStatus)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.ActivityStatus)
+        </dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.ConversionHistory)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.ConversionHistory)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.ConversionHistory)
-		</dd>
+        <dd>
+            @Html.TextAreaFor(model => model.ConversionHistory, new { @style = "min-width: 40%; height: 200px", @readonly = "readonly" })
+        </dd>
 
-	</dl>
+    </dl>
 </div>
 <p>
     @Html.ActionLink("Изменить", "Edit", new { id = Model.Id }) |
