--- a/SSU.Reception/SSU.Reception2/Views/Enrollees/Index.cshtml
+++ b/SSU.Reception/SSU.Reception2/Views/Enrollees/Index.cshtml
@@ -4,34 +4,36 @@
     ViewBag.Title = "Список абитуриентов";
 }
 
-    <div class="panel panel-info">
-        <div class="panel-heading">
-            Общий список абитуриентов на @DateTime.Now
-        </div>
-
-        <div class="panel-body">
-            @using (Html.BeginForm("Index", "Enrollees", FormMethod.Get, new { @class = "form-inline", @style = "justify-content: space-between; display: flex" }))
-            {
-                <!-- Строка поиска -->
-                @Html.Editor("search", (string)ViewData["search"], new { htmlAttributes = new { @class = "form-control", @style = "display: inline-flex", @placeholder = "Поиск по ФИО.." } })
-
-                <!-- Чекбокс "Только активные абитуриенты" -->
-                <div>
-                    @Html.CheckBox("activeOnly", (bool)ViewData["activeOnly"], new { @class = "form-check-input", @id = "checkbox-activity" })
-                    <label class="form-check-label" for="checkbox-activity">Только активные абитуриенты</label>
-                </div>
-
-                <!-- Чекбокс "Только оригинал аттестата" -->
-                <div>
-                    @Html.CheckBox("originalCertificateOnly", (bool)ViewData["originalCertificateOnly"], new { @class = "form-check-input", @id = "checkbox-certificate" })
-                    <label class="form-check-label" for="checkbox-certificate">Только оригинал аттестата</label>
-                </div>
-
-                <!-- Кнопка "применить" -->
-                <input type="submit" value="Применить" class="btn btn-success" />
-            }
-        </div>
+<div class="panel panel-info">
+    <div class="panel-heading">
+        Общий список абитуриентов на @DateTime.Now
     </div>
+
+    <div class="panel-body">
+        @using (Html.BeginForm("Index", "Enrollees", FormMethod.Get, new { @class = "form-inline", @style = "justify-content: space-between; display: flex" }))
+        {
+            @Html.AntiForgeryToken()
+
+            <!-- Строка поиска -->
+            @Html.Editor("search", (string)ViewData["search"], new { htmlAttributes = new { @class = "form-control", @style = "display: inline-flex", @placeholder = "Поиск по ФИО.." } })
+
+            <!-- Чекбокс "Только активные абитуриенты" -->
+            <div>
+                @Html.CheckBox("activeOnly", (bool)ViewData["activeOnly"], new { @class = "form-check-input", @id = "checkbox-activity" })
+                <label class="form-check-label" for="checkbox-activity">Только активные абитуриенты</label>
+            </div>
+
+            <!-- Чекбокс "Только оригинал аттестата" -->
+            <div>
+                @Html.CheckBox("originalCertificateOnly", (bool)ViewData["originalCertificateOnly"], new { @class = "form-check-input", @id = "checkbox-certificate" })
+                <label class="form-check-label" for="checkbox-certificate">Только оригинал аттестата</label>
+            </div>
+
+            <!-- Кнопка "применить" -->
+            <input type="submit" value="Применить" class="btn btn-success" />
+        }
+    </div>
+</div>
 
 <div class="table-responsive">
     <table class="table table-striped table-bordered">
@@ -120,9 +122,6 @@
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.ActivityStatus)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ConversionHistory)
                 </th>
                 <th></th>
             </tr>
@@ -218,9 +217,6 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.ActivityStatus)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ConversionHistory)
                     </td>
                     <td>
                         @Html.ActionLink("Изменить", "Edit", new { id = item.Id })
