--- a/SSU.Reception/SSU.Reception2/Views/Directions/Rating.cshtml
+++ b/SSU.Reception/SSU.Reception2/Views/Directions/Rating.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<SSU.Reception.Models.Enrollee>
 
 @{
-    ViewBag.Title = "Главная";
+    ViewBag.Title = "Точный список " + @ViewData["DirectionName"];
 }
 
 <div class="panel panel-info">
 
     <div class="panel-heading">
-        Общий рейтинг абитуриентов на @DateTime.Now
+        Точный список для направления @ViewData["DirectionName"] на @DateTime.Now
     </div>
 
     <div class="panel-body">
@@ -35,7 +35,7 @@
 </div>
 
 <div class="table-responsive">
-    <table class="table table-striped table-bordered">
+    <table id="dataTable" class="table table-striped table-bordered">
         <thead>
             <tr>
                 <th id="index" rowspan="2">#</th>
@@ -52,6 +52,7 @@
                 <th id="dop_point" rowspan="2">Доп. баллы</th>
                 <th id="original_status" rowspan="2">Статус оригинала</th>
                 <th id="change_column" rowspan="2">Изменить</th>
+                <th id="info_column" rowspan="2">Инфо</th>
                 <th id="delete_column" rowspan="2">Удалить</th>
             </tr>
             <tr>
@@ -146,3 +147,11 @@
         }
     </table>
 </div>
+
+<!-- Экспорт в эксель -->
+<div style="justify-content: center; width: 100%; margin:15px 15px 2px 4px;">
+    <button class="btn btn-primary" onclick="javascript: fnExcelReport('dataTable', '@ViewData["DirectionName"] @DateTime.Now.ToString("G")')">Экспорт</button>
+</div>
+
+<script src="~/Scripts/FileSaver.js"></script>
+<script src="~/Scripts/excel-export.js"></script>
