--- a/SSU.Reception/SSU.Reception2/Views/Enrollees/Delete.cshtml
+++ b/SSU.Reception/SSU.Reception2/Views/Enrollees/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model SSU.Reception.Models.Enrollee
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удаление абитуриента";
 }
 
-<h2>Delete</h2>
+<h2>Удаление абитуриента</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы уверены, что хотите удалить этого абитуриента?</h3>
 <div>
-    <h4>Enrollee</h4>
     <hr />
 	<dl class="dl-horizontal">
 		<dt>
