--- a/SSU.Reception/SSU.Reception2/Views/Enrollees/Index.cshtml
+++ b/SSU.Reception/SSU.Reception2/Views/Enrollees/Index.cshtml
@@ -36,7 +36,7 @@
 </div>
 
 <div class="table-responsive">
-    <table class="table table-striped table-bordered">
+    <table id="dataTable" class="table table-striped table-bordered">
         <thead>
             <tr>
                 <th>
@@ -123,7 +123,7 @@
                 <th>
                     @Html.DisplayNameFor(model => model.ActivityStatus)
                 </th>
-                <th></th>
+                <th id="info_column"></th>
             </tr>
         </thead>
         @{
@@ -234,6 +234,8 @@
     @SSU.Reception.Helpers.HtmlHelperExtension.PagingPrev(Html, (int)ViewData["page"])
     @Html.ActionLink("Создать нового абитуриента", "Create", null, new { @class = "btn btn-success" })
     @SSU.Reception.Helpers.HtmlHelperExtension.PagingNext(Html, (int)ViewData["page"], (int)ViewData["items_count"], (int)ViewData["size"])
+    <button class="btn btn-primary" onclick="javascript: fnExcelReport('dataTable', 'Абитуриенты @DateTime.Now.ToString("G")')">Экспорт</button>
 </div>
 
-
+<script src="~/Scripts/FileSaver.js"></script>
+<script src="~/Scripts/excel-export.js"></script>
