--- a/SSU.Reception/SSU.Reception2/Views/Home/Index.cshtml
+++ b/SSU.Reception/SSU.Reception2/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
 </div>
 
 <div class="table-responsive">
-    <table class="table table-striped table-bordered">
+    <table id="dataTable" class="table table-striped table-bordered">
         <thead>
             <tr>
                 @{
@@ -174,4 +174,8 @@
 <div style="justify-content: center; width: 100%; margin:15px 15px 2px 4px;">
     @SSU.Reception.Helpers.HtmlHelperExtension.PagingPrev(Html, (int)ViewData["page"])
     @SSU.Reception.Helpers.HtmlHelperExtension.PagingNext(Html, (int)ViewData["page"], (int)ViewData["items_count"], (int)ViewData["size"])
+    <button class="btn btn-primary" onclick="javascript: fnExcelReport('dataTable', 'Общий рейтинг @DateTime.Now.ToString("G")')">Экспорт</button>
 </div>
+
+<script src="~/Scripts/FileSaver.js"></script>
+<script src="~/Scripts/excel-export.js"></script>
