--- a/SSU.Reception/SSU.Reception2/Views/Schools/Create.cshtml
+++ b/SSU.Reception/SSU.Reception2/Views/Schools/Create.cshtml
@@ -1,18 +1,17 @@
 ﻿@model SSU.Reception.Models.School
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Создание школы";
 }
 
-<h2>Create</h2>
+<h2>Создание школы</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>School</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -25,14 +24,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Создать" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться к списку школ", "Index")
 </div>
 
 @section Scripts {
