--- a/SSU.Reception/SSU.Reception2/Views/Schools/Delete.cshtml
+++ b/SSU.Reception/SSU.Reception2/Views/Schools/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model SSU.Reception.Models.School
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удаление школы";
 }
 
-<h2>Delete</h2>
+<h2>Удаление школы</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы уверены, что хотите удалить эту школу?</h3>
 <div>
-    <h4>School</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -25,8 +24,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Удалить" class="btn btn-danger" /> |
+            @Html.ActionLink("Вернуться к списку школ", "Index")
         </div>
     }
 </div>
