--- a/SSU.Reception/SSU.Reception2/Views/Schools/Edit.cshtml
+++ b/SSU.Reception/SSU.Reception2/Views/Schools/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SSU.Reception.Models.School
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Изменение школы";
 }
 
-<h2>Edit</h2>
+<h2>Изменение школы</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>School</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -25,14 +24,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Сохранить" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться к списку школ", "Index")
 </div>
 
 @section Scripts {
